setup to railway

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=1
-DB_NAME=book
-# DATABASE_URL=postgresql://postgres:XYZXoIhtErREDJlcADBJyZSpohwIRnNT@postgres.railway.internal:5432/railway
-# PGDATABASE=railway
-# PGHOST=postgres.railway.internal
-# PGPASSWORD=XYZXoIhtErREDJlcADBJyZSpohwIRnNT
-# PGPORT=5432
-# PGUSER=postgres
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USER=postgres
+# DB_PASSWORD=1
+# DB_NAME=book
+DATABASE_URL=postgresql://postgres:KhUqKTVleckummvTSYmHZmLyCVjRrYOa@postgres.railway.internal:5432/railway
+PGDATABASE=railway
+PGHOST=postgres.railway.internal
+PGPASSWORD=KhUqKTVleckummvTSYmHZmLyCVjRrYOa
+PGPORT=5432
+PGUSER=postgres
